--- a/building-containerized-applications-on-aws/pythonwebapp/docker-python-webapp-dynamo/Dockerfile
+++ b/building-containerized-applications-on-aws/pythonwebapp/docker-python-webapp-dynamo/Dockerfile
@@ -11,9 +11,9 @@
 
 
 # You can probably use a lighter image here
-FROM ubuntu:16.04
+FROM ubuntu:latest
 
-LABEL maintainer="morgan@notarealemail.com"
+LABEL maintainer="sambooaws@gmail.com"
 
 RUN apt-get update -y && \
     apt-get install -y python-pip python-dev
