--- a/building-containerized-applications-on-aws/pythonwebapp/docker-python-webapp-dynamo/Dockerfile
+++ b/building-containerized-applications-on-aws/pythonwebapp/docker-python-webapp-dynamo/Dockerfile
@@ -16,13 +16,13 @@ FROM ubuntu:latest
 LABEL maintainer="sambooaws@gmail.com"
 
 RUN apt-get update -y && \
-    apt-get install -y python-pip python-dev
+    apt-get install -y python3-pip python-dev
 
 COPY ./requirements.txt /app/requirements.txt
 
 WORKDIR /app
 
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . /app
 
